--- a/src/pug/base/variables/_global.pug
+++ b/src/pug/base/variables/_global.pug
@@ -2,13 +2,13 @@
 - const Theme = 'red';
 
 //- For SEO Optimization required
-- const siteTitle = 'Site Başlığı';
-- const siteDescription = 'Site Açıklaması';
+- const siteTitle = 'Football Charts';
+- const siteDescription = 'Football Charts and Graphics';
 - const siteKeywords = 'site,kelimeleri,virgülle,ayrılmalıdır';
-- const siteAuthor = 'site Authoru';
+- const siteAuthor = 'YellowRed';
 - const siteRobots = 'noindex,nofollow';
 - const siteUrl = 'https://website.com';
-- const siteLanguage = 'tr-TR'
+- const siteLanguage = 'en-EN'
 
 //- Copyright
 - const siteCopyright = '1 Ocak 2019 autohorsiteurl.com.tr';
