--- a/src/pug/partials/includes/_scripts.pug
+++ b/src/pug/partials/includes/_scripts.pug
@@ -1,16 +1,11 @@
 +line
 +c('Scripts')
++script('sidebar/modernzr',true)
+
 +script('jquery',true)
 +script('bootstrap',true)
++script('sidebar/classie',true)
++script('sidebar/main',true)
++script('sidebar/sidebar',true)
+
 +script('app')
-- if (isThemeforestTheme) {
-	+c('Color Switcher -- For Demo')
-	+script('color-switcher',true)
-	script.
-		var colorSheets = [
-			{color: "#f00",title: "Switch to Red",href: "assets/css/colors/red.min.css"},
-			{color: "#0f0",title: "Switch to Green",href: "assets/css/colors/green.min.css"},
-			{color: "#00f",title: "Switch to Blue",href: "assets/css/colors/blue.min.css"}
-		];
-		ColorSwitcher.init(colorSheets);
-- }
