--- a/src/sass/layouts/_default.scss
+++ b/src/sass/layouts/_default.scss
@@ -6,3 +6,21 @@
 	stroke: currentColor;
 	fill: currentColor;
 }
+body {
+	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
+	overflow: hidden;
+	margin: 0;
+	color: #cecece;
+	background: #2a2b30;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+.container {
+	overflow-y: auto;
+	height: 100vh;
+	.content {
+		position: relative;
+		min-height: 300px;
+		margin: 0 0 0 300px;
+	}
+}
