add fomantic-ui packages

--- a/src/pug/partials/includes/_scripts.pug
+++ b/src/pug/partials/includes/_scripts.pug
@@ -1,7 +1,7 @@
 +line
 +c('Scripts')
 +vendorscript('jquery','jquery/dist',true)
-//+script('bootstrap',true)
++vendorscript('semantic','fomantic-ui/dist',true)
 +script('app')
 - if (isThemeforestTheme) {
 - }
