--- a/src/pug/partials/includes/_styles.pug
+++ b/src/pug/partials/includes/_styles.pug
@@ -1,5 +1,5 @@
 +c('Styles')
-//+link('bootstrap',true)
++vendorlink('semantic','fomantic-ui/dist',true)
 +link('app')
 if (isThemeforestTheme)
 	+line
