add sidebar and navbar partials

--- a/src/pug/base/variables/_global.pug
+++ b/src/pug/base/variables/_global.pug
@@ -14,10 +14,10 @@
 - const siteCopyright = '20 Temmuz 2020 by YellowRed';
 
 //- Logo Url
-- const siteLogoUrl = 'assets/img/og-img.jpg';
+- const siteLogoUrl = 'assets/img/prod/logo.svg';
 
 //- Favicons
-- const siteFavicon = 'assets/img/favicon.png';
+- const siteFavicon = 'assets/img/prod/favicons/favicon.svg';
 
 //- Address Bar Color
 - const siteThemeColor = '#ffffff';
