--- a/src/pug/partials/includes/_meta-tags.pug
+++ b/src/pug/partials/includes/_meta-tags.pug
@@ -28,8 +28,8 @@ meta(name='googlebot', content=siteRobots)
 +line
 +c('Favicons')
 
-link(rel='shortcut icon', href=siteFavicon, type='image/x-icon')
-link(rel='icon', href=siteFavicon, type='image/x-icon')
+link(rel='shortcut icon', href=siteFavicon, type='image/svg+xml')
+link(rel='icon', href=siteFavicon, type='image/svg+xml')
 link(rel='apple-touch-icon', href=siteFavicon)
 link(rel='mask-icon', href=siteFavicon, color=siteThemeColor)
 
