--- a/src/pug/partials/includes/_styles.pug
+++ b/src/pug/partials/includes/_styles.pug
@@ -1,5 +1,6 @@
 +c('Styles')
 +vendorlink('semantic','fomantic-ui/dist',true)
++vendorlink('metisMenu','metisMenu/dist/',true)
 +link('app')
 if (isThemeforestTheme)
 	+line
