--- a/src/sass/_layouts.scss
+++ b/src/sass/_layouts.scss
@@ -2,3 +2,9 @@
 @import "partials/header";
 @import "partials/sidebar";
 @import "partials/footer";
+@import "partials/breadcrumb";
+@import "partials/loader";
+@import "partials/navbar";
+
+
+
