--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -4,10 +4,10 @@
 		* Created Date    : date
 		* Version         : 1.0.0
 	Author;
-		* Email           : yasinatesim@gmail.com
-		* Web Site        : http://www.yasinates.com
+		* Email           : telatkaya@gmail.com
+		* Web Site        : http://www.telatkaya.com
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-	Copyright (c) 2019 - yasinatesim - https://themeforest.net/user/yasinatesim
+	Copyright (c) 2019 - telatkaya - https://themeforest.net/user/yellowred
 ============================================================================================
 */
 
@@ -57,3 +57,11 @@
 --------------------------------------------------------------------------*/
 
 @import "pages";
+
+
+
+
+
+
+
+
