--- a/src/pug/partials/includes/_scripts.pug
+++ b/src/pug/partials/includes/_scripts.pug
@@ -2,6 +2,7 @@
 +c('Scripts')
 +vendorscript('jquery','jquery/dist',true)
 +vendorscript('semantic','fomantic-ui/dist',true)
++vendorscript('metisMenu','metisMenu/dist',true)
 +script('app')
 - if (isThemeforestTheme) {
 - }
