--- a/src/sass/base/mixins/_media-queries.scss
+++ b/src/sass/base/mixins/_media-queries.scss
@@ -1,27 +1,21 @@
-@mixin mq($width: "desktop") {
-	@if($width=="mobile") {
-		@media (min-width: 576px) {
-			@content
-		}
-	}
-	@else if ($width=="tablet") {
-		@media (min-width: 768px) {
-			@content
-		}
-	}
-	@else if ($width=="desktop") {
-		@media (min-width: 992px) {
-			@content
-		}
-	}
-	@else if ($width=="large") {
-		@media (min-width: 1200px) {
-			@content
-		}
-	}
-	@else if ($width=="xlarge") {
-		@media (min-width: 1600px) {
-			@content
-		}
-	}
+$breakpoints: (
+    "phone":        400px,
+    "phone-wide":   480px,
+    "phablet":      560px,
+    "tablet-small": 640px,
+    "tablet":       768px,
+    "tablet-wide":  1024px,
+    "desktop":      1248px,
+    "desktop-wide": 1440px
+);
+@mixin mq($width, $type: min) {
+    @if map_has_key($breakpoints, $width) {
+        $width: map_get($breakpoints, $width);
+        @if $type == max {
+            $width: $width - 1px;
+        }
+        @media only screen and (#{$type}-width: $width) {
+            @content;
+        }
+    }
 }
