--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -1,88 +1,94 @@
-.ui.menu {
-    &.nav-menu {
-        height: 70px;
-        margin: 0;
-        border-radius: 0;
-        //box-shadow: none;
-        border: 0;
-        -webkit-box-shadow: 0 0 40px 0 rgba(154, 161, 171, .7);
-        box-shadow: 0 0 40px 0 rgba(154, 161, 171, .7);
-        z-index: 999999999;
-        font-family: 'Cuprum', sans-serif;
-        .ui.dropdown {
-            .menu {
-                box-shadow: none;
-                border: 0;
-              
-                &::before {
-                    background: linear-gradient(70deg, #ff2882, #963cff);
-                    content: "";
-                    display: block;
-                    height: 3px;
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                    width: 100%;
-                }
+.landing-header {
+	background-color: #5f4dee;
+	.header-content {
+		padding-top: 8rem;
+		padding-bottom: 4rem;
+		text-align: center;
+	}
+	.text-container {
+		margin-bottom: 3rem;
+	}
+	h1 {
+		margin-bottom: 1rem;
+		color: #fff;
+		font-size: 2.5rem;
+		line-height: 3rem;
+	}
+	.p-large {
+		margin-bottom: 2rem;
+		color: #f3f7fd;
+	}
+}
+.header-frame {
+	margin-top: -1px;
+	width: 100%;
+	height: 2.25rem;
+}
+@media (min-width: 1200px) {
+	.h2-heading {
+		width: 50%;
+	}
+	.landing-header {
+		.header-content {
+			padding-top: 11rem;
+			padding-bottom: 5rem;
+		}
+		.text-container {
+			margin-top: 5.5rem;
+			margin-right: 0.5rem;
+		}
+		.image-container {
+			margin-top: 1rem;
+			margin-left: 1.5rem;
+		}
+	}
+	.landing-header .image-container .img-wrapper {
+		position: absolute;
+		display: block;
+		width: 100%;
+		&.__second {
+			top: 130px;
+			left: 100px;
+			img {
+				transform: rotate(-10deg);
+			}
+		}
 
-                .menu {
-                    
-                    //border-bottom-left-radius: 0!important;
-                    margin: 0;
-
-                    &::before {
-                        background: linear-gradient(70deg, #963cff, #ff2882);
-                        content: "";
-                        display: block;
-                        height: 3px;
-                        position: absolute;
-                        left: 0;
-                        top: 0;
-                        width: 100%;
-                    }
-                }
-            }
-        }
-
-        .item {
-            border-radius: 0 !important;
-            border: 0;
-            
-            border-bottom: 2px solid transparent;
-
-            i.dropdown.icon{
-                margin-left: 10px;
-            }
-            @include mq("phablet", max) {
-                display: none;
-            }
-
-            &.hover-item {
-                transition: all .3s ease-out;
-
-                &:hover {
-                    border-bottom: 2px solid #ff2882;
-                }
-            }
-           
-            i {
-                text-align: center;
-                margin: 0 auto;
-            }
-
-            h4 {
-                font-family: 'Cuprum', sans-serif;
-                margin-left: 10px;
-            }
-
-            &.toc {
-                display: none;
-
-                @include mq("phablet", max) {
-                    display: block;
-                }
-            }
-
-        }
-    }
+		img {
+			border-radius: 5px;
+			transform: rotate(20deg);
+			object-fit: cover;
+		}
+	}
+	.header-frame {
+		height: 9.375rem;
+	}
+}
+@media (min-width: 768px) {
+	.p-heading {
+		width: 85%;
+		margin-right: auto;
+		margin-left: auto;
+	}
+	.h2-heading {
+		width: 80%;
+		margin-right: auto;
+		margin-left: auto;
+	}
+	.landing-header {
+		.text-container {
+			margin-bottom: 4rem;
+		}
+		h1 {
+			font-size: 3.5rem;
+			line-height: 4.125rem;
+		}
+		.btn-solid-lg {
+			margin-bottom: 0;
+			margin-left: 0;
+		}
+	}
+	.header-frame {
+		height: 5.5rem;
+	}
 }
