--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,114 +6,45 @@ block content
 	.ui.grid.container.stackable
 		.row
 			.column
-				.ui.three.cards
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-4.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
-						.extra.content
-							a
-
-
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-3.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
-						.extra.content
-							a
-
-
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-6.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
-						.extra.content
-							a
-
-
+				.ui.three.special.stackable.cards
+					each cardList in [{image:'ex-1',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-2',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-3',title:'Passes Map',desc:'Single Player Passes Direction Map'}]
+						.card
+							.blurring.dimmable.image
+								.ui.inverted.dimmer
+									.content
+										.center
+											a.ui.positive.button Browse
+								img(src='assets/img/sample/'+cardList.image+'.png')
+							.content
+								a.header #{cardList.title}
+								.description #{cardList.desc}
 		.row
 			.column
-				.ui.three.cards
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-4.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
-						.extra.content
-							a
-
-
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-3.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
-						.extra.content
-							a
-
-
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-6.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
+				.ui.three.special.stackable.cards
+					each cardList in [{image:'ex-4',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-5',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-6',title:'Passes Map',desc:'Single Player Passes Direction Map'}]
+						.card
+							.image
+								img(src='assets/img/sample/'+cardList.image+'.png')
+							.content
+								a.header #{cardList.title}
+								.description #{cardList.desc}
 		.row
 			.column
-				.ui.three.cards
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-4.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-3.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
-					.ui.card
-						.image
-							img(src='assets/img/sample/ex-6.png')
-						.content
-							a.header Kristy
-							.meta
-								span.date Joined in 2013
-							.description
-								| Kristy is an art director living in New York.
-
-
-
+				.ui.three.special.stackable.cards
+					each cardList in [{image:'ex-7',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-8',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-9',title:'Passes Map',desc:'Single Player Passes Direction Map'}]
+						.card
+							.image
+								img(src='assets/img/sample/'+cardList.image+'.png')
+							.content
+								a.header #{cardList.title}
+								.description #{cardList.desc}
+		.row
+			.column
+				.ui.three.special.stackable.cards
+					each cardList in [{image:'ex-10',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-11',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-12',title:'Passes Map',desc:'Single Player Passes Direction Map'}]
+						.card
+							.image
+								img(src='assets/img/sample/'+cardList.image+'.png')
+							.content
+								a.header #{cardList.title}
+								.description #{cardList.desc}
