--- a/src/pug/partials/_footer.pug
+++ b/src/pug/partials/_footer.pug
@@ -10,12 +10,12 @@ svg.footer-frame(data-name='Layer 2', xmlns='http://www.w3.org/2000/svg', preser
 		.row
 			.column
 				.footer-col.first
-					h4 About Tivo
+					h4 About Footcharts
 					p.p-small
 						| We're passionate about designing and developing one of the best marketing apps in the market
 			.column
 				.footer-col.middle
-					h4 Important Links
+					h4 Documents
 					ul.list-unstyled.li-space-lg.p-small
 						li.media
 							i.fas.fa-square
@@ -39,13 +39,13 @@ svg.footer-frame(data-name='Layer 2', xmlns='http://www.w3.org/2000/svg', preser
 						li.media
 							i.fas.fa-envelope
 							.media-body
-								a.white(href='mailto:contact@tivo.com') contact@tivo.com
+								a.white(href='mailto:help@yellowred.info') help@yellowred.info
 								i.fas.fa-globe
-								a.white(href='#your-link') www.tivo.com
+								a.white(href='https://yellowred.info') https://yellowred.info
 .copyright
 	.ui.grid.container.stackable.center.aligned.equal.width(style="margin-bottom:0")
 		.row
 			.column
 				p.p-small
 					| Copyright © 2020
-					a(href='https://inovatik.com') Template by Inovatik
+					a(href='https://yellowred.info')  Plugin by YellowRed
