--- a/src/pug/league-table.pug
+++ b/src/pug/league-table.pug
@@ -7,7 +7,7 @@ block content
 		.row
 			.sixteen.wide.column
 				.select-menu
-					.ui.form
+					.ui.fluid.form
 						.three.fields
 							.field
 								.ui.fluid.search.selection.dropdown.league-select
