--- a/src/pug/partials/includes/_menu.pug
+++ b/src/pug/partials/includes/_menu.pug
@@ -64,18 +64,10 @@
                     ],
                     "target":"_blank"
                 },
-                "Change Log":{
-                    "icon":"icon-jinnang",
-                    "text":"Change Log",
-                    "link":"change-log.html",
-                    "sidebarBadge":"New",
-                    "child":[
-                    ]
-                },
                 "Docs":{
                     "icon":"icon-zaocan",
                     "text":"Docs",
-                    "link":"./assets/docs",
+                    "link":"./docs/index.html",
                     "child":[
                     ],
                     "target":"_blank"
