--- a/src/sass/layouts/_default.scss
+++ b/src/sass/layouts/_default.scss
@@ -94,8 +94,8 @@ body {
 		flex-direction: column;
 	}
 	.ui.dropdown {
-		margin: 20px;
-		min-width: 300px;
+		margin: 10px;
+		min-width: 350px!important;
 		transition: 0.1s;
 		box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.15);
 		border: solid 1px #963cff;
