--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,7 +7,7 @@ block content
 		.row
 			.column
 				.ui.two.stackable.cards
-					each cardList in [{image:'2',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'3',title:'Passes Map',desc:'Single Player Passes Direction Map'}]
+					each cardList in [{image:'2',title:'Passes Map',desc:'Paul Pogba Passes Direction Map'},{image:'3',title:'Passes Map',desc:'Harry Kane Passes Direction Map'}]
 						.card
 							.blurring.dimmable.image
 								.ui.inverted.dimmer
@@ -21,7 +21,7 @@ block content
 		.row
 			.column
 				.ui.two.stackable.cards
-					each cardList in [{image:'ex-4',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-5',title:'Passes Map',desc:'Single Player Passes Direction Map'}]
+					each cardList in [{image:'ex-4',title:'Player Versus',desc:'Aguero vs Griezman'},{image:'ex-5',title:'Player Versus',desc:'Mbappe vs Jesus'}]
 						.card
 							.image
 								img(src='assets/img/sample/'+cardList.image+'.png')
@@ -31,7 +31,7 @@ block content
 		.row
 			.column
 				.ui.three.stackable.cards
-					each cardList in [{image:'ex-8',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-9',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-17',title:'Passes Map',desc:'Single Player Passes Direction Map'}]
+					each cardList in [{image:'ex-8',title:'Player Skills Graph',desc:'Messi Skills Graph'},{image:'ex-9',title:'Player Skills Graph',desc:'Ronaldo Skills Graph'},{image:'ex-17',title:'Player Skills Graph',desc:'Ramos Skills Graph'}]
 						.card
 							.image
 								img(src='assets/img/sample/'+cardList.image+'.png')
@@ -41,7 +41,7 @@ block content
 		.row
 			.column
 				.ui.two.stackable.cards
-					each cardList in [{image:'ex-10',title:'Passes Map',desc:'Single Player Passes Direction Map'},{image:'ex-11',title:'Passes Map',desc:'Single Player Passes Direction Map'}]
+					each cardList in [{image:'ex-10',title:'Premier League Games',desc:'Week 9 Games'},{image:'ex-11',title:'Turkey Super League Games',desc:'Week 5 Games'}]
 						.card
 							.image
 								img(src='assets/img/sample/'+cardList.image+'.png')
