--- a/src/pug/partials/_footer.pug
+++ b/src/pug/partials/_footer.pug
@@ -12,30 +12,16 @@ svg.footer-frame(data-name='Layer 2', xmlns='http://www.w3.org/2000/svg', preser
 				.footer-col.first
 					h4 About Footcharts
 					p.p-small
-						| We're passionate about designing and developing one of the best marketing apps in the market
+						| Footcharts is Echarts based Football Charts and Graphics, its simple and beatiful
 			.column
 				.footer-col.middle
-					h4 Documents
-					ul.list-unstyled.li-space-lg.p-small
-						li.media
-							i.fas.fa-square
-							.media-body
-								| Our business partners
-								a.white(href='#your-link') startupguide.com
-						li.media
-							i.fas.fa-square
-							.media-body
-								| Read our
-								a.white(href='terms-conditions.html') Terms & Conditions
-								| ,
-								a.white(href='privacy-policy.html') Privacy Policy
+					h4 About Us
+					p.p-small
+						| Yellowred TEAM
 			.column
 				.footer-col.last
 					h4 Contact
 					ul.list-unstyled.li-space-lg.p-small
-						li.media
-							i.fas.fa-map-marker-alt
-							.media-body 22 Innovative, San Francisco, CA 94043, US
 						li.media
 							i.fas.fa-envelope
 							.media-body
