--- a/src/pug/layouts/default.pug
+++ b/src/pug/layouts/default.pug
@@ -43,6 +43,7 @@ html(lang=siteLanguage)
 		include ../partials/includes/_meta-tags
 		include ../partials/includes/_styles
 	body
+		include ../partials/_sidebar
 		if(page=='index')
 			include ../partials/_header
 		+line
