remove inline-styles

--- a/src/pug/league-table.pug
+++ b/src/pug/league-table.pug
@@ -46,22 +46,22 @@ block content
 									.default.text Select Color
 									.menu.league-menu
 										.item(data-value='27,153,139')
-											i(class="icon circle",style="color:rgba(27,153,139,1)")
+											i(class="icon circle green-color")
 											| Green
 										.item(data-value='219,84,97')
-											i(class="icon circle",style="color:rgba(219,84,97,1)")
+											i(class="icon circle red-color")
 											| Red
 										.item(data-value='55, 0, 60')
-											i(class="icon circle",style="color:rgba(55, 0, 60,1)")
+											i(class="icon circle purple-color")
 											| Purple
 										.item(data-value='66, 129, 164')
-											i(class="icon circle",style="color:rgba(66, 129, 164,1)")
+											i(class="icon circle blue-color")
 											| Blue
 										.item(data-value='242, 100, 48')
-											i(class="icon circle",style="color:rgba(242, 100, 48,1)")
+											i(class="icon circle orange-color")
 											| Orange
 										.item(data-value='89, 87, 88')
-											i(class="icon circle",style="color:rgba(89, 87, 88,1)")
+											i(class="icon circle grey-color")
 											| Grey
 			.sixteen.wide.column
 				.ui.segment.table-segment
