--- a/src/pug/partials/_copyright.pug
+++ b/src/pug/partials/_copyright.pug
@@ -1,5 +1,5 @@
 .copyright
-	.ui.grid.container.stackable.center.aligned.equal.width(style="margin-bottom:0")
+	.ui.grid.container.stackable.center.aligned.equal.width
 		.row
 			.column
 				p.p-small
