--- a/src/pug/player-skills.pug
+++ b/src/pug/player-skills.pug
@@ -8,8 +8,8 @@ block content
 			.sixteen.mobile.column
 				.ui.segment.p-0
 					.card-wrapper
-						.player-card(style="padding-top:50px")
-							#playerSkills.chartli(style="height:700px")
+						.player-card
+							#playerSkills.chartli(style="height:600px")
 							a.ui.button.pagination-button.left-button Prev
 							a.ui.button.pagination-button.right-button Next
 block extraScripts
