--- a/src/pug/player-versus.pug
+++ b/src/pug/player-versus.pug
@@ -6,7 +6,7 @@ block content
 	.ui.equal.width.stackable.grid
 		.row
 			.sixteen.mobile.column
-				.ui.segment.attached(style="background:#171B22;padding:0")
+				.ui.segment.attached.versus-segment
 					.select-menu
 						.ui.search.selection.dropdown.pl1
 							input(type='hidden')
