--- a/src/pug/single-game.pug
+++ b/src/pug/single-game.pug
@@ -6,7 +6,8 @@ block content
 	.ui.stackable.grid
 		.row
 			.column
-				h3(style="text-align:center;margin-bottom:10px") This page is experimental
+				h3.ui.center.aligned.header This page is experimental
+				.ui.hidden.divider
 				#singleGame(class="chartli",style="height:1580px;width:100%")
 block extraScripts
 	+script('charts/_single-game',true)
