--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,2 +1,6 @@
 @import './components/theme-switch';
 @import './components/cards';
+@import './components/component-colors';
+@import './components/image';
+@import './components/segments';
+
