--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,13 +1,13 @@
 /*!
 	Template;
-		* Name	   	      : ThemeName
-		* Created Date    : date
+		* Name	   	      : Footcharts
+		* Created Date    : 01.07.2020
 		* Version         : 1.0.0
 	Author;
-		* Email           : telatkaya@gmail.com
-		* Web Site        : http://www.telatkaya.com
+		* Email           : help@yellowred.info
+		* Web Site        : http://yellowred.info
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-	Copyright (c) 2019 - telatkaya - https://themeforest.net/user/yellowred
+	Copyright (c) 2019 - yellowred - https://themeforest.net/user/yellowred
 ============================================================================================
 */
 
