--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -83,6 +83,9 @@
 	padding-bottom: 0.375rem;
 	background-color: #5f4dee;
 	text-align: center;
+    .grid{
+        margin-bottom:0
+    }
 }
 
 .copyright .p-small {
