--- a/src/pug/layouts/default.pug
+++ b/src/pug/layouts/default.pug
@@ -16,9 +16,9 @@ include ../base/_mixins
 	- } else {
 	//
 		Template;
-				* Name          : themeName
-				* Created Date  : themeDate
-				* Version       : themeVersion
+				* Name          : Footcharts
+				* Created Date  : 01.07.2020
+				* Version       : 1.0.0
 		Author;
 				* Email         : help@yellowred.info
 				* Web Site      : https://yellowred.info
