--- a/src/sass/base/variables/_colors.scss
+++ b/src/sass/base/variables/_colors.scss
@@ -1,29 +1,8 @@
 :root {
-	--bg-color: #f7f7f7;
-	--font-color: #222430;
-	--heading-color: #000;
-	--link-color: #d34a97;
-	--primary-color: #222220;
-	--secondary-color: #c28c2e;
-	--tertiary-color: #d8cdb9;
-	--quaternary-color: #721b29;
-	--primary-text-color: #d8cdb9;
-	--secondary-text-color: #222220;
-	--tertiary-text-color: #721b29;
-	--quaternary-text-color: #c28c2e;
-}
-
-[data-theme='dark'] {
-	--bg-color: #222430;
-	--font-color: #f7f7f7;
-	--heading-color: #000;
-	--link-color: #bd93f9;
-	--primary-color: #222220;
-	--secondary-color: #c28c2e;
-	--tertiary-color: #d8cdb9;
-	--quaternary-color: #721b29;
-	--primary-text-color: #d8cdb9;
-	--secondary-text-color: #222220;
-	--tertiary-text-color: #721b29;
-	--quaternary-text-color: #c28c2e;
+	--green: rgba(27, 153, 139, 1);
+	--purple: rgba(55, 0, 60, 1);
+	--red: rgba(219, 84, 97, 1);
+	--blue: rgba(66, 129, 164, 1);
+	--orange: rgba(242, 100, 48, 1);
+	--grey: rgba(89, 87, 88, 1);
 }
